{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 588,
  "lineage": "68489ee5-c345-0b9a-53e1-3fcb0d33e2f2",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:internet-gateway/igw-0651cbcba14789962",
            "id": "igw-0651cbcba14789962",
            "owner_id": "377575712836",
            "tags": {
              "Name": "h4b-ecs-igw"
            },
            "tags_all": {
              "Name": "h4b-ecs-igw"
            },
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:loadbalancer/app/h4b-ecs-alb/490802683161fc1a",
            "arn_suffix": "app/h4b-ecs-alb/490802683161fc1a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "h4b-ecs-alb-322658717.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:loadbalancer/app/h4b-ecs-alb/490802683161fc1a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "h4b-ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c36110b51cab0e3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4a33567b821dce7"
              },
              {
                "subnet_id": "subnet-0b2efc700e1a1f187"
              }
            ],
            "subnets": [
              "subnet-0a4a33567b821dce7",
              "subnet-0b2efc700e1a1f187"
            ],
            "tags": {
              "Env": "h4b-ecs-alb"
            },
            "tags_all": {
              "Env": "h4b-ecs-alb"
            },
            "vpc_id": "vpc-044375292dc646943",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:listener/app/h4b-ecs-alb/490802683161fc1a/70be8efaf5589dec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:targetgroup/h4b-ecs-alb-tg/ed839acdaf43a529",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:listener/app/h4b-ecs-alb/490802683161fc1a/70be8efaf5589dec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:loadbalancer/app/h4b-ecs-alb/490802683161fc1a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "module.elb.aws_lb.main",
            "module.elb.aws_lb_target_group.main",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:targetgroup/h4b-ecs-alb-tg/ed839acdaf43a529",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:listener-rule/app/h4b-ecs-alb/490802683161fc1a/70be8efaf5589dec/d496483dbccbe64c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:listener-rule/app/h4b-ecs-alb/490802683161fc1a/70be8efaf5589dec/d496483dbccbe64c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:listener/app/h4b-ecs-alb/490802683161fc1a/70be8efaf5589dec",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "dependencies": [
            "module.elb.aws_lb.main",
            "module.elb.aws_lb_listener.main",
            "module.elb.aws_lb_target_group.main",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:targetgroup/h4b-ecs-alb-tg/ed839acdaf43a529",
            "arn_suffix": "targetgroup/h4b-ecs-alb-tg/ed839acdaf43a529",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:377575712836:targetgroup/h4b-ecs-alb-tg/ed839acdaf43a529",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "h4b-ecs-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.elb.aws_lb.main",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf7dac2b304fe16f",
            "original_route_table_id": "rtb-0118614aebc706c0d",
            "route_table_id": "rtb-0b5ff67cac9ccc71c",
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0651cbcba14789962",
            "id": "r-rtb-0b5ff67cac9ccc71c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b5ff67cac9ccc71c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:route-table/rtb-0b5ff67cac9ccc71c",
            "id": "rtb-0b5ff67cac9ccc71c",
            "owner_id": "377575712836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0651cbcba14789962",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "h4b-ecs-public"
            },
            "tags_all": {
              "Name": "h4b-ecs-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012f3e92955470976",
            "route_table_id": "rtb-0b5ff67cac9ccc71c",
            "subnet_id": "subnet-0a4a33567b821dce7"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_1a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f035f7cde13a7fbf",
            "route_table_id": "rtb-0b5ff67cac9ccc71c",
            "subnet_id": "subnet-0b2efc700e1a1f187"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:security-group/sg-0c36110b51cab0e3e",
            "description": "h4b-ecs alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c36110b51cab0e3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "h4b-ecs-alb",
            "name_prefix": "",
            "owner_id": "377575712836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "h4b-ecs-alb-sg"
            },
            "tags_all": {
              "Name": "h4b-ecs-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:security-group/sg-0a7a6db2d7191c41f",
            "description": "h4b-ecs-ecs-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7a6db2d7191c41f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c36110b51cab0e3e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "h4b-ecs-ecs-sg",
            "name_prefix": "",
            "owner_id": "377575712836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "h4b-ecs-ecs-sg"
            },
            "tags_all": {
              "Name": "h4b-ecs-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:security-group/sg-080383179ed410ae3",
            "description": "h4b-ecs-vpc-endpoint-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080383179ed410ae3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "h4b-ecs-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "377575712836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "h4b-ecs-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "h4b-ecs-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2729499337",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c36110b51cab0e3e",
            "security_group_rule_id": "sgr-0ce5f18ce554f3dac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_outbound_all_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2638656851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c36110b51cab0e3e",
            "security_group_rule_id": "sgr-07f94e537247989cd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-1984144524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7a6db2d7191c41f",
            "security_group_rule_id": "sgr-0c8b08640e9f08072",
            "self": false,
            "source_security_group_id": "sg-0c36110b51cab0e3e",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb",
            "module.security_group.aws_security_group.ecs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_outbound_all_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3033003314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a7a6db2d7191c41f",
            "security_group_rule_id": "sgr-0ad75e8a6e1ab93b3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.ecs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoint_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2123115083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-080383179ed410ae3",
            "security_group_rule_id": "sgr-02b65d69a8e361fda",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.vpc_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoint_outbound_all_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-235627988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-080383179ed410ae3",
            "security_group_rule_id": "sgr-0c55c45306e1caedf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.vpc_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:subnet/subnet-0a4a33567b821dce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4a33567b821dce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "377575712836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "h4b-ecs-public-1a"
            },
            "tags_all": {
              "Name": "h4b-ecs-public-1a"
            },
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:subnet/subnet-0b2efc700e1a1f187",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2efc700e1a1f187",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "377575712836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "h4b-ecs-public-1c"
            },
            "tags_all": {
              "Name": "h4b-ecs-public-1c"
            },
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:vpc/vpc-044375292dc646943",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca6ee10bb5288688",
            "default_route_table_id": "rtb-0b5ff67cac9ccc71c",
            "default_security_group_id": "sg-07ceb3a7064548139",
            "dhcp_options_id": "dopt-b1391cd6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044375292dc646943",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5ff67cac9ccc71c",
            "owner_id": "377575712836",
            "tags": {
              "Name": "h4b-ecs-vpc"
            },
            "tags_all": {
              "Name": "h4b-ecs-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:vpc-endpoint/vpce-0b164bbd2eea4bbb6",
            "dns_entry": [
              {
                "dns_name": "vpce-0b164bbd2eea4bbb6-rcwahioq.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b164bbd2eea4bbb6-rcwahioq-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b164bbd2eea4bbb6-rcwahioq-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0b164bbd2eea4bbb6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0884997717c331fc9",
              "eni-0c831c62e7bc170a3"
            ],
            "owner_id": "377575712836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080383179ed410ae3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0a4a33567b821dce7",
              "subnet-0b2efc700e1a1f187"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.vpc_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:vpc-endpoint/vpce-0bd56cb5cc93ad593",
            "dns_entry": [
              {
                "dns_name": "vpce-0bd56cb5cc93ad593-goobt5da.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0bd56cb5cc93ad593-goobt5da-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0bd56cb5cc93ad593-goobt5da-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0bd56cb5cc93ad593",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-053686000561d4fc6",
              "eni-0f5a0b47720d8e63d"
            ],
            "owner_id": "377575712836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-080383179ed410ae3"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0a4a33567b821dce7",
              "subnet-0b2efc700e1a1f187"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_subnet.public_1a",
            "module.network.aws_subnet.public_1c",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.vpc_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:377575712836:vpc-endpoint/vpce-02d9d47d75581f83c",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.0.0/20",
              "52.219.200.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-02d9d47d75581f83c",
            "owner_id": "377575712836",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b5ff67cac9ccc71c"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-044375292dc646943"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}